Update build command for windows

--- a/awsmobilejs/.awsmobile/info/project-config.json
+++ b/awsmobilejs/.awsmobile/info/project-config.json
@@ -1,6 +1,6 @@
 {
 	"SourceDir": "",
 	"DistributionDir": "build",
-	"BuildCommand": "quasar build",
+	"BuildCommand": "quasar.cmd build",
 	"StartCommand": "quasar.cmd dev"
 }
