--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "aws-amplify": "^1.0.0",
     "axios": "^0.18.0",
-    "vue-i18n": "^7.3.3"
+    "vue-i18n": "^7.3.3",
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
