--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "aws-amplify": "^1.0.0",
     "axios": "^0.18.0",
     "vue-i18n": "^7.3.3",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
