Setup Words Testing page and added error messages for sign up

--- a/awsmobilejs/.awsmobile/info/project-config.json
+++ b/awsmobilejs/.awsmobile/info/project-config.json
@@ -1,6 +1,6 @@
 {
-	"SourceDir": "",
-	"DistributionDir": "build",
+	"SourceDir": "src",
+	"DistributionDir": "dist/spa-mat",
 	"BuildCommand": "quasar.cmd build",
 	"StartCommand": "quasar.cmd dev"
 }
