--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aws-amplify": "^1.0.0",
     "axios": "^0.18.0",
+    "uuid": "^3.3.2",
     "vue-i18n": "^7.3.3",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
