--- a/awsmobilejs/backend/cloud-api/studentAPI/package.json
+++ b/awsmobilejs/backend/cloud-api/studentAPI/package.json
@@ -8,7 +8,9 @@
     "aws-sdk": "^2.49.0",
     "aws-serverless-express": "^2.2.0",
     "body-parser": "^1.17.1",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "express-async-handler": "^1.1.4",
+    "pg": "^7.4.3"
   },
   "devDependencies": {},
   "scripts": {
